# c-uni

./: CMakeLists.txt  LICENSE  README.md
include/: utils.h
src/: CMakeLists.txt  binary_tree.c  ce_es24.c  heap.c  ia1.c  ia2.c  ia3.c  ia4.c  ia5.c  ia_extra01.c  ia_extra02.c  ia_extra04.c  ia_extra05.c  sort.c  utils.c
